chore: major refactor, CONFIG object, accessibility fixes, and UI polish

--- a/index.html
+++ b/index.html
@@ -241,13 +241,20 @@
                     <!-- Radio Stream Widget -->
                     <div class="glass widget-card radio-widget card-animate" style="--delay: 6">
                         <h3>📻 RADIO UŽIVO</h3>
-                        <div class="radio-player">
+                        <div class="radio-player" id="radio-player">
                             <button type="button" class="play-btn" id="radio-play" aria-label="Pokreni radio stream">
                                 <span class="play-icon">▶</span>
                             </button>
                             <div class="radio-info">
                                 <span class="now-playing">Sada svira</span>
                                 <span class="song-title">Radio Rab - 24/7</span>
+                            </div>
+                            <div class="equalizer" aria-hidden="true">
+                                <div class="eq-bar"></div>
+                                <div class="eq-bar"></div>
+                                <div class="eq-bar"></div>
+                                <div class="eq-bar"></div>
+                                <div class="eq-bar"></div>
                             </div>
                         </div>
 
