--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
     <link rel="stylesheet" href="style.css">
-</head>
+
+    <script src="data.js"></script>
+  </head>
 
 <body>
     <!-- Skip Link for Accessibility -->
