fix: restore and enhance AIS ferry data display and ghost ferry visualization

--- a/index.html
+++ b/index.html
@@ -369,6 +369,10 @@
           <div class="map-overlay-info glass">
             <h4><span class="pulse-dot"></span> NPT LIVE DATA</h4>
             <p>Izvor: Ministarstvo mora, prometa i infrastrukture (DATEX II)</p>
+            <div id="ferry-status-v2" style="margin-top: 1rem; border-top: 1px solid var(--border); padding-top: 1rem;">
+              <!-- This will be mirrored by script.js -->
+              <p style="font-size: 0.75rem; color: var(--text-dim);">Učitavanje AIS podataka...</p>
+            </div>
           </div>
         </div>
       </section>
