--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@700;800;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@700;800;900&family=Rajdhani:wght@600;700&display=swap"
     rel="stylesheet" />
 
   <!-- Leaflet Map -->
@@ -89,9 +89,9 @@
       <nav class="header-nav" aria-label="Glavna navigacija">
         <ul class="nav-links">
           <li><a href="#feed" class="nav-link nav-trigger active" data-tab="feed">Vijesti</a></li>
-          <li><a href="#shorts" class="nav-link nav-trigger" data-tab="shorts">Sport</a></li>
-          <li><a href="#map" class="nav-link nav-trigger" data-tab="map">Kultura</a></li>
-          <li><a href="#market" class="nav-link nav-trigger" data-tab="market">Otok</a></li>
+          <li><a href="#shorts" class="nav-link nav-trigger" data-tab="shorts">Video</a></li>
+          <li><a href="#map" class="nav-link nav-trigger" data-tab="map">Karta</a></li>
+          <li><a href="#market" class="nav-link nav-trigger" data-tab="market">Tržnica</a></li>
           <li><a href="#contact" class="nav-link nav-trigger">Kontakt</a></li>
           <li>
             <button type="button" class="btn-highlight" id="reporter-btn"
@@ -131,9 +131,6 @@
 
         <!-- SIDEBAR (ISLAND TOOLBELT) -->
         <aside class="sidebar-stack" aria-label="Island Toolbelt">
-          <h2
-            style="font-size: 0.65rem; letter-spacing: 0.2em; opacity: 0.4; margin-bottom: 0.5rem; text-transform: uppercase; font-weight: 800;">
-            Island Toolbelt</h2>
           <!-- Weather & Marine Widget (TOP) -->
           <div class="glass widget-card weather-widget card-animate" style="--delay: 1">
             <h3><span class="icon">🌊</span> MORE I VRIJEME</h3>
