--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
   <main id="main-content" class="container">
     <!-- MAIN NEWS FEED -->
     <section id="feed" class="tab-content active" aria-label="Naslovnica">
-      <div class="editorial-grid">
-        <!-- CATEGORY FILTER BAR -->
+      <!-- CATEGORY FILTER BAR -->
+      <div class="filter-sticky-wrapper">
         <div class="filter-bar card-animate" role="group" aria-label="Filtriraj vijesti po kategoriji">
           <button class="filter-btn active" data-cat="all" aria-pressed="true">Sve</button>
           <button class="filter-btn" data-cat="LOKALNO" aria-pressed="false">Lokalno</button>
@@ -116,6 +116,9 @@
           <button class="filter-btn" data-cat="KULTURA" aria-pressed="false">Kultura</button>
           <button class="filter-btn" data-cat="TURIZAM" aria-pressed="false">Turizam</button>
         </div>
+      </div>
+
+      <div class="editorial-grid">
 
         <div class="main-feed-column">
           <!-- FEATURED STORY -->
