--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <div class="glass widget-card weather-widget card-animate" style="--delay: 1">
             <h3><span class="icon">🌊</span> MORE I VRIJEME</h3>
             <div class="weather-grid">
-              <div class="weather-item">
+              <div class="weather-item" data-weather="sea-temp">
                 <span class="weather-label">Temp. mora</span>
                 <span class="weather-value">14°C</span>
               </div>
@@ -146,11 +146,11 @@
                 <span class="weather-label">Vjetar</span>
                 <span class="weather-value">Bura 25 km/h</span>
               </div>
-              <div class="weather-item">
+              <div class="weather-item" data-weather="tide">
                 <span class="weather-label">Plima</span>
                 <span class="weather-value">14:32</span>
               </div>
-              <div class="weather-item">
+              <div class="weather-item" data-weather="sunrise">
                 <span class="weather-label">Izlazak sunca</span>
                 <span class="weather-value">07:12</span>
               </div>
