--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
     <div class="container header-content">
       <div class="brand">
         <h1>RADIO<span>RAB</span></h1>
-        <p class="tagline">Glas otoka od 1968.</p>
       </div>
       <nav class="header-nav" aria-label="Glavna navigacija">
         <ul class="nav-links">
@@ -127,6 +126,12 @@
           </button>
           <button class="filter-btn" data-cat="TURIZAM" aria-pressed="false">
             <i data-lucide="plane" class="filter-icon"></i> Turizam
+          </button>
+          <button class="filter-btn" data-cat="MORE" aria-pressed="false">
+            <i data-lucide="anchor" class="filter-icon"></i> More
+          </button>
+          <button class="filter-btn" data-cat="GASTRONOMIJA" aria-pressed="false">
+            <i data-lucide="utensils" class="filter-icon"></i> Gastronomija
           </button>
         </div>
       </div>
@@ -346,7 +351,6 @@
       <div class="footer-grid">
         <div class="footer-brand">
           <h4>RADIO<span>RAB</span></h4>
-          <p>Glas otoka od 1968. Vaš izvor za lokalne vijesti, kulturu i događanja.</p>
         </div>
         <div class="footer-links">
           <h5>Rubrike</h5>
