--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
   </button>
 
   <script src="config.local.js" onerror="console.info('config.local.js not found - skipping local config')"></script>
+  <script src="aisstream-websocket.js"></script>
   <script src="data.js"></script>
   <script src="data/traffic-data.js"
     onerror="console.info('traffic-data.js not found - NPT data will be fetched via JSON')"></script>
