--- a/index.html
+++ b/index.html
@@ -751,8 +751,7 @@
     </div>
   </div>
 
-  <script src="config.local.js"
-    onerror="window.LOCAL_CONFIG = { ENABLE_REAL_AIS: false }; console.info('config.local.js not found - using default settings')"></script>
+  <!-- AIS_CONFIG_INJECT -->
   <script src="aisstream-websocket.js"></script>
   <script src="data.js"></script>
   <script src="config.js"></script>
