--- a/index.html
+++ b/index.html
@@ -752,13 +752,15 @@
   </div>
 
   <script src="config.local.js" onerror="this.remove()"></script>
-  <script src="config.js"></script>
+  <script src="config.js?v=1.1"></script>
+  <script src="vessel-config.js?t=${new Date().getTime()}" onerror="this.remove()"></script>
   <script src="aisstream-websocket.js"></script>
   <script src="data.js"></script>
   <script>
+    // Critical Fallback for AIS Config
     if (typeof window.LOCAL_CONFIG === 'undefined') {
       window.LOCAL_CONFIG = { ENABLE_REAL_AIS: false };
-      console.info('🚢 Using Simulation (no local config found)');
+      console.info('🚢 Using Simulation (no vessel-config.js found)');
     }
   </script>
   <script src="utils.js"></script>
