--- a/index.html
+++ b/index.html
@@ -764,11 +764,11 @@
   <script src="ui.js"></script>
   <script id="ais-config">/* PRODUCTION_CONFIG_REPLACE_ME */ window.LOCAL_CONFIG = { ENABLE_REAL_AIS: false };</script>
   <script>
-    console.log('🔍 AIS System Diagnostic (v1.0.3):', {
+    console.log('🔍 AIS System Diagnostic (v1.0.5):', {
       env: window.LOCAL_CONFIG?.AISSTREAM_API_KEY ? 'PRODUCTION' : 'LOCAL/SIMULATION',
-      realAisEnabled: window.LOCAL_CONFIG?.ENABLE_REAL_AIS,
       hasApiKey: !!window.LOCAL_CONFIG?.AISSTREAM_API_KEY,
-      libraryLoaded: !!window.AISStreamClient
+      libraryLoaded: !!window.AISStreamClient,
+      rawTagContent: document.getElementById('ais-config')?.innerHTML?.trim()
     });
   </script>
   <script src="script.js"></script>
